--- a/test/k8sT/manifests/guestbook_deployment.yaml
+++ b/test/k8sT/manifests/guestbook_deployment.yaml
@@ -27,7 +27,7 @@ spec:
         - name: redis-server
           containerPort: 6379
       nodeSelector:
-        kubernetes.io/hostname: k8s1
+        "cilium.io/ci-node": k8s1
 ---
 kind: Service
 apiVersion: v1
@@ -73,7 +73,7 @@ spec:
         - name: redis-server
           containerPort: 6379
       nodeSelector:
-        kubernetes.io/hostname: k8s1
+        "cilium.io/ci-node": k8s1
 ---
 kind: Service
 apiVersion: v1
@@ -119,4 +119,4 @@ spec:
         ports:
         - containerPort: 80
       nodeSelector:
-        kubernetes.io/hostname: k8s2
+        cilium.io/ci-node: k8s2
