--- a/test/k8sT/manifests/kafka-sw-app.yaml
+++ b/test/k8sT/manifests/kafka-sw-app.yaml
@@ -78,7 +78,8 @@ spec:
         image: docker.io/cilium/kafkaclient:latest
         imagePullPolicy: IfNotPresent
       nodeSelector:
-        "kubernetes.io/hostname": k8s1
+        "cilium.io/ci-node": k8s1
+
 ---
 apiVersion: apps/v1
 kind: Deployment
