plugins/cilium-cni: disable CNI debug messages by default
As debug messages can be verbose in production environments Cilium will
disable such messages by default. Turning them back on is as simple as
setting up the pod lifecycle postStart hook with `cni-install.sh
--enable-debug=true`

Signed-off-by: André Martins <andre@cilium.io>

--- a/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
@@ -88,7 +88,8 @@ spec:
           postStart:
             exec:
               command:
-              - /cni-install.sh
+              - "/cni-install.sh"
+              -{{- if .Values.global.debug.enabled }} "--enable-debug=true"{{- else }} "--enable-debug=false"{{- end }}
           preStop:
             exec:
               command:
