--- a/plugins/cilium-cni/05-cilium-cni.conf
+++ b/plugins/cilium-cni/05-cilium-cni.conf
@@ -1,5 +1,6 @@
 {
     "cniVersion": "0.3.1",
     "name": "cilium",
-    "type": "cilium-cni"
+    "type": "cilium-cni",
+    "enable-debug": true
 }
