install: fix label used in ServiceMonitor to select cilium-agent
The ServiceMonitor uses labels to select a Service resource, and the
corresponding Service resource is labeled with `k8s-app: cilium`.

Signed-off-by: Patrick Mahoney <pmahoney@greenkeytech.com>

--- a/install/kubernetes/cilium/charts/agent/templates/servicemonitor.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/servicemonitor.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      k8s-app: cilium-agent
+      k8s-app: cilium
   namespaceSelector:
     matchNames:
     - {{ .Release.Namespace }}
