--- a/test/Makefile
+++ b/test/Makefile
@@ -1,8 +1,8 @@
 include ../Makefile.defs
 
 provision = true
-# If you set provision to false the test will run without compile the code
-# again.
+# If you set provision to false the test will run without bootstrapping the
+# cluster again.
 
 TEST_ARTIFACTS = ./tmp.yaml ./*_service_manifest.json ./*_manifest.yaml
 TEST_ARTIFACTS += ./*_policy.json ./k8s-*.xml ./runtime.xml ./test_results
@@ -28,6 +28,9 @@ run:
 
 k8s:
 	ginkgo --focus " K8s*" -v -- --cilium.provision=$(provision)
+
+nightly:
+	ginkgo --focus " Nightly*" -v -- --cilium.provision=$(provision)
 
 clean:
 	@$(ECHO_CLEAN)
