Added chart value for etcd-operator cluster domain
Signed-off-by: Dan Sexton <dan.b.sexton@gmail.com>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -36,6 +36,9 @@ global:
     # managed turns on managed etcd mode based on the cilium-etcd-operator
     managed: false
 
+    # sets cluster domain for cilium-etcd-operator
+    clusterDomain: cluster.local
+
     # endpoints is the list of etcd endpoints (not needed when using
     # managed=true)
     endpoints:
