Documentation: add script to add misspelled words
```
(sphinx-build -b spelling -d "_build/doctrees" "." "_build/spelling" -q -E  2>&1 && touch check-build.ok) > _build/warnings.txt

Please fix the following spelling mistakes:
* Documentation/cheatsheet.rst:82: (zsh)
If the words are not misspelled, run:
Documentation/update-spelling_wordlist.sh zsh

make: *** [Makefile:72: check-build] Error 1
```

Signed-off-by: André Martins <andre@cilium.io>

--- a/Documentation/Makefile
+++ b/Documentation/Makefile
@@ -74,11 +74,16 @@ check-build: check-requirements
 		exit 1; \
 	fi
 	@if [ "$$(wc -l < "$(BUILDDIR)/spelling/output.txt")" -ne "0" ]; then \
+	        echo ""; \
 		echo "Please fix the following spelling mistakes:"; \
 		sed 's/^/* Documentation\//' $(BUILDDIR)/spelling/output.txt; \
-		echo "If the words are not misspelled, add them to Documentation/$(SPELLING_LIST)."; \
+		echo "If the words are not misspelled, run:"; \
+		echo -n "Documentation/update-spelling_wordlist.sh "; \
+		echo "`sed -E 's/^([^:]+:){2} \((.*)\)/\2/g' $(BUILDDIR)/spelling/output.txt | sort -u | tr -d '\r\n' | sed "s/'/\\\\\\\\'/g"`"; \
+		echo ""; \
 		exit 1; \
 	fi
+	#                                                                                                               ^^^^^^ replace FOO'bar with FOO\'bar
 	@rm $@.ok 2>/dev/null
 
 # To use checklinks with `make render-docs`,
