HostToContainer propagation for /sys/fs/bpf
By default, mount events from the host namespace are not propagated to a
container  after a volume has been mounted into it.
Thus, the initContainer of the agent can never notice changes to
/sys/fs/bpf (it cannot detect if the path became a mountpoint)

With mountPropagation: HostToContainer, the mount events are propagated
to the container, allowing the init container to correctly detect
changes on /sys/fs/bpf, if it is mounted on the host while the script is
blocked waiting for it to be mounted.

In other words, this makes wait-bpf-mount work as advertised.

Signed-off by: Jean Raby <jean@raby.sh>

--- a/install/kubernetes/quick-install.yaml
+++ b/install/kubernetes/quick-install.yaml
@@ -383,7 +383,7 @@ spec:
             exec:
               command:
               - "/cni-install.sh"
-              - "--enable-debug=true"
+              - "--enable-debug=false"
           preStop:
             exec:
               command:
@@ -475,6 +475,7 @@ spec:
         volumeMounts:
         - mountPath: /sys/fs/bpf
           name: bpf-maps
+          mountPropagation: HostToContainer
         - mountPath: /var/run/cilium
           name: cilium-run
       restartPolicy: Always
