--- a/install/kubernetes/cilium/charts/agent/templates/svc.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/svc.yaml
@@ -11,7 +11,7 @@ spec:
   type: ClusterIP
   ports:
   - name: metrics
-    port: 9090
+    port: {{ .Values.global.prometheus.port }}
     protocol: TCP
     targetPort: prometheus
   selector:
