[CI] fix /var/log/journal mount in log gatherer
Signed-off-by: Maciej Kwiek <maciej@isovalent.com>

--- a/test/k8sT/manifests/log-gatherer.yaml
+++ b/test/k8sT/manifests/log-gatherer.yaml
@@ -36,7 +36,7 @@ spec:
         volumeMounts:
         - mountPath: /sys/fs/bpf
           name: bpf-maps
-        - mountPath: /var/log/hostjournal
+        - mountPath: /var/log/journal
           name: journald
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
