CI: Switch non-CI FQDN tests to use internet domains
On CI we can emulate world via servers on a separate docker network.
This isn't possible on managed K8s but we can use known public targets
instead. We use vagrant-cache.ci.cilium.io and jenkins.cilium.io since
they are likely to be up unless the CI itself is down.

Signed-off-by: Ray Bejjani <ray@isovalent.com>

--- a/test/k8sT/manifests/fqdn-proxy-multiple-specs.yaml
+++ b/test/k8sT/manifests/fqdn-proxy-multiple-specs.yaml
@@ -13,7 +13,7 @@ specs:
         dns:
         - matchPattern: "*"
   - toFQDNs:
-    - matchPattern: "world1.cilium.test"
+    - matchPattern: "vagrant-cache.ci.cilium.io"
   endpointSelector:
     matchLabels:
       id: app2
@@ -26,7 +26,7 @@ specs:
         dns:
         - matchPattern: "*"
   - toFQDNs:
-    - matchPattern: "world2.cilium.test"
+    - matchPattern: "jenkins.cilium.io"
   endpointSelector:
     matchLabels:
       id: app3
