--- a/test/k8sT/manifests/fqdn-proxy-policy.yaml
+++ b/test/k8sT/manifests/fqdn-proxy-policy.yaml
@@ -16,4 +16,4 @@ spec:
         dns:
         - matchPattern: "*"
   - toFQDNs:
-    - matchPattern: "world1.cilium.test"
+    - matchPattern: "vagrant-cache.ci.cilium.io"
