--- a/contrib/packaging/docker/Dockerfile.runtime
+++ b/contrib/packaging/docker/Dockerfile.runtime
@@ -39,7 +39,9 @@ RUN \
 apt-get update && \
 apt-get install -y --no-install-recommends make git curl ca-certificates xz-utils \
 # Additional iproute2 build dependencies
-  gcc git pkg-config bison flex build-essential && \
+  gcc git pkg-config bison flex build-essential \
+# Additional bpftool dependencies
+  python3 && \
 #
 # iproute2
 #
