--- a/install/kubernetes/cilium/charts/nodeinit/values.yaml
+++ b/install/kubernetes/cilium/charts/nodeinit/values.yaml
@@ -11,3 +11,6 @@ removeCbrBridge: false
 # Wait for the /var/run/azure-vnet.json file to be created before continuing the
 # script
 azure: false
+
+# Revert nodeinit changes via preStop container lifecycle hook
+revertReconfigureKubelet: false
