helm: Enable remote-node identity for all new deployments by default
Signed-off-by: Thomas Graf <thomas@cilium.io>

--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -301,3 +301,4 @@ data:
 {{- else }}
   enable-well-known-identities: "false"
 {{- end }}
+  enable-remote-node-identity: {{ .Values.global.remoteNodeIdentity | quote }}
