--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -308,3 +308,6 @@ global:
 
   tls:
     secretsBackend: local
+
+  # remoteNodeIdentity enables use of the remote node identity
+  remoteNodeIdentity: true
