daemon: Replace --enable-dsr with --node-port-mode
As we are planning to support multiple mutually inclusive modes for
NodePort, introduce a flag to store them. Also, re-use the flag
for enabling the DSR option.

Signed-off-by: Martynas Pumputis <m@lambda.lt>

--- a/install/kubernetes/cilium/charts/config/templates/configmap.yaml
+++ b/install/kubernetes/cilium/charts/config/templates/configmap.yaml
@@ -268,8 +268,8 @@ data:
 {{- if .Values.global.nodePort.device }}
   device: {{ .Values.global.nodePort.device | quote }}
 {{- end }}
-{{- if .Values.global.nodePort.dsr }}
-  enable-dsr: "true"
+{{- if .Values.global.nodePort.mode }}
+  node-port-mode: {{ .Values.global.nodePort.mode | quote }}
 {{- end }}
 
 {{- end }}
