test: Do not schedule cilium-agent on k8s3
The commit d7b6c3f ("bpf: make bpf_sock REMOTE_NODE_ID aware")
introduced the following optimization in NodePort service translation:

    If a client which runs on any node managed by Cilium sends a request to
    a NodePort service via another node (i.e. dst IP != the client node
    IP), then the NodePort service lookup and translation will happen on
    the client-side instead of the destination node.

Unfortunately, the optimization complicates some test cases of
test/k8sT/Services.go suite, in which we expect that the lookup and
translation will happen on the destination node (we want to test
bpf_netdev.c instead of bpf_sock.c).

To avoid this, we prevent cilium-agent from being scheduled on the k8s3
node by setting an affinity.

Signed-off-by: Martynas Pumputis <m@lambda.lt>

--- a/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
+++ b/install/kubernetes/cilium/charts/agent/templates/daemonset.yaml
@@ -24,6 +24,10 @@ spec:
       labels:
         k8s-app: cilium
     spec:
+{{- if .Values.global.affinity }}
+      affinity:
+{{ toYaml .Values.global.affinity | indent 8 }}
+{{- end }}
       containers:
       - args:
         - --config-dir=/tmp/cilium/config-map
