test: Do not sync k8s nodes in operator when NO_CILIUM_ON_NODE is set
Previously, in ManagedEtcd test case, cilium-operator used to add
the "$NO_CILIUM_ON_NODE" node into kvstore, which make the node to be
added into nodes list at each cilium-agent. Consequently, this made
health checks to fail on each cilium-agent, and thus the test case
failed.

Signed-off-by: Martynas Pumputis <m@lambda.lt>

--- a/install/kubernetes/cilium/charts/operator/templates/deployment.yaml
+++ b/install/kubernetes/cilium/charts/operator/templates/deployment.yaml
@@ -38,6 +38,7 @@ spec:
 {{- if .Values.global.kubeConfigPath }}
         - --k8s-kubeconfig-path={{ .Values.global.kubeConfigPath }}
 {{- end }}
+        - --synchronize-k8s-nodes={{ .Values.synchronizeK8sNodes }}
         command:
         - cilium-operator
         env:
