--- a/test/k8sT/manifests/bookinfo-v2-istio.yaml
+++ b/test/k8sT/manifests/bookinfo-v2-istio.yaml
@@ -44,10 +44,15 @@ spec:
   template:
     metadata:
       annotations:
-        sidecar.istio.io/status: '{"version":"6eaa5f3d0263084f01d97d7d17e5e117af881e8e850f9ce60fd9a9d7b1735c3f","initContainers":["sleep","istio-init"],"containers":["istio-proxy"],"volumes":["cilium-unix-sock-dir","istio-envoy","istio-certs"],"imagePullSecrets":null}'
+        sidecar.istio.io/interceptionMode: TPROXY
+        sidecar.istio.io/status: '{"version":"4f56cb98d6f61d0239441bcbc858009ac38a43a765332950a948ca6fd2bc9cef","initContainers":["sleep","istio-init"],"containers":["istio-proxy"],"volumes":["cilium-unix-sock-dir","istio-envoy","istio-certs"],"imagePullSecrets":null}'
+        traffic.sidecar.istio.io/excludeInboundPorts: "15020"
+        traffic.sidecar.istio.io/includeInboundPorts: "9080"
+        traffic.sidecar.istio.io/includeOutboundIPRanges: '*'
       creationTimestamp: null
       labels:
         app: ratings
+        security.istio.io/tlsMode: istio
         version: v1
         zgroup: bookinfo
     spec:
@@ -96,6 +101,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: ISTIO_META_POD_PORTS
+          value: |-
+            [
+                {"containerPort":9080}
+            ]
+        - name: ISTIO_META_CLUSTER_ID
+          value: Kubernetes
         - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
@@ -104,6 +116,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
+        - name: SERVICE_ACCOUNT
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.serviceAccountName
         - name: ISTIO_META_POD_NAME
           valueFrom:
             fieldRef:
@@ -112,6 +128,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: SDS_ENABLED
+          value: "false"
         - name: ISTIO_META_INTERCEPTION_MODE
           value: TPROXY
         - name: ISTIO_META_INCLUDE_INBOUND_PORTS
@@ -119,7 +137,11 @@ spec:
         - name: ISTIO_METAJSON_LABELS
           value: |
             {"app":"ratings","version":"v1","zgroup":"bookinfo"}
-        image: docker.io/cilium/istio_proxy:1.2.5
+        - name: ISTIO_META_WORKLOAD_NAME
+          value: ratings-v1
+        - name: ISTIO_META_OWNER
+          value: kubernetes://apis/apps/v1/namespaces/default/deployments/ratings-v1
+        image: docker.io/cilium/istio_proxy:1.4.3
         imagePullPolicy: IfNotPresent
         name: istio-proxy
         ports:
@@ -141,11 +163,17 @@ spec:
             cpu: 100m
             memory: 128Mi
         securityContext:
+          allowPrivilegeEscalation: false
           capabilities:
             add:
             - NET_ADMIN
+            drop:
+            - ALL
+          privileged: false
           readOnlyRootFilesystem: true
           runAsGroup: 1337
+          runAsNonRoot: false
+          runAsUser: 0
         volumeMounts:
         - mountPath: /var/run/cilium
           name: cilium-unix-sock-dir
@@ -165,9 +193,12 @@ spec:
         imagePullPolicy: IfNotPresent
         name: sleep
         resources: {}
-      - args:
+      - command:
+        - istio-iptables
         - -p
         - "15001"
+        - -z
+        - "15006"
         - -u
         - "1337"
         - -m
@@ -177,10 +208,10 @@ spec:
         - -x
         - ""
         - -b
-        - "9080"
+        - '*'
         - -d
         - "15020"
-        image: docker.io/istio/proxy_init:1.2.5
+        image: docker.io/istio/proxyv2:1.4.3
         imagePullPolicy: IfNotPresent
         name: istio-init
         resources:
@@ -191,9 +222,16 @@ spec:
             cpu: 10m
             memory: 10Mi
         securityContext:
+          allowPrivilegeEscalation: false
           capabilities:
             add:
             - NET_ADMIN
+            - NET_RAW
+            drop:
+            - ALL
+          privileged: false
+          readOnlyRootFilesystem: false
+          runAsGroup: 0
           runAsNonRoot: false
           runAsUser: 0
       terminationGracePeriodSeconds: 0
@@ -226,10 +264,15 @@ spec:
   template:
     metadata:
       annotations:
-        sidecar.istio.io/status: '{"version":"6eaa5f3d0263084f01d97d7d17e5e117af881e8e850f9ce60fd9a9d7b1735c3f","initContainers":["sleep","istio-init"],"containers":["istio-proxy"],"volumes":["cilium-unix-sock-dir","istio-envoy","istio-certs"],"imagePullSecrets":null}'
+        sidecar.istio.io/interceptionMode: TPROXY
+        sidecar.istio.io/status: '{"version":"4f56cb98d6f61d0239441bcbc858009ac38a43a765332950a948ca6fd2bc9cef","initContainers":["sleep","istio-init"],"containers":["istio-proxy"],"volumes":["cilium-unix-sock-dir","istio-envoy","istio-certs"],"imagePullSecrets":null}'
+        traffic.sidecar.istio.io/excludeInboundPorts: "15020"
+        traffic.sidecar.istio.io/includeInboundPorts: "9080"
+        traffic.sidecar.istio.io/includeOutboundIPRanges: '*'
       creationTimestamp: null
       labels:
         app: reviews
+        security.istio.io/tlsMode: istio
         version: v2
         zgroup: bookinfo
     spec:
@@ -278,6 +321,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: ISTIO_META_POD_PORTS
+          value: |-
+            [
+                {"containerPort":9080}
+            ]
+        - name: ISTIO_META_CLUSTER_ID
+          value: Kubernetes
         - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
@@ -286,6 +336,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
+        - name: SERVICE_ACCOUNT
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.serviceAccountName
         - name: ISTIO_META_POD_NAME
           valueFrom:
             fieldRef:
@@ -294,6 +348,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: SDS_ENABLED
+          value: "false"
         - name: ISTIO_META_INTERCEPTION_MODE
           value: TPROXY
         - name: ISTIO_META_INCLUDE_INBOUND_PORTS
@@ -301,7 +357,11 @@ spec:
         - name: ISTIO_METAJSON_LABELS
           value: |
             {"app":"reviews","version":"v2","zgroup":"bookinfo"}
-        image: docker.io/cilium/istio_proxy:1.2.5
+        - name: ISTIO_META_WORKLOAD_NAME
+          value: reviews-v2
+        - name: ISTIO_META_OWNER
+          value: kubernetes://apis/apps/v1/namespaces/default/deployments/reviews-v2
+        image: docker.io/cilium/istio_proxy:1.4.3
         imagePullPolicy: IfNotPresent
         name: istio-proxy
         ports:
@@ -323,11 +383,17 @@ spec:
             cpu: 100m
             memory: 128Mi
         securityContext:
+          allowPrivilegeEscalation: false
           capabilities:
             add:
             - NET_ADMIN
+            drop:
+            - ALL
+          privileged: false
           readOnlyRootFilesystem: true
           runAsGroup: 1337
+          runAsNonRoot: false
+          runAsUser: 0
         volumeMounts:
         - mountPath: /var/run/cilium
           name: cilium-unix-sock-dir
@@ -347,9 +413,12 @@ spec:
         imagePullPolicy: IfNotPresent
         name: sleep
         resources: {}
-      - args:
+      - command:
+        - istio-iptables
         - -p
         - "15001"
+        - -z
+        - "15006"
         - -u
         - "1337"
         - -m
@@ -359,10 +428,10 @@ spec:
         - -x
         - ""
         - -b
-        - "9080"
+        - '*'
         - -d
         - "15020"
-        image: docker.io/istio/proxy_init:1.2.5
+        image: docker.io/istio/proxyv2:1.4.3
         imagePullPolicy: IfNotPresent
         name: istio-init
         resources:
@@ -373,9 +442,16 @@ spec:
             cpu: 10m
             memory: 10Mi
         securityContext:
+          allowPrivilegeEscalation: false
           capabilities:
             add:
             - NET_ADMIN
+            - NET_RAW
+            drop:
+            - ALL
+          privileged: false
+          readOnlyRootFilesystem: false
+          runAsGroup: 0
           runAsNonRoot: false
           runAsUser: 0
       terminationGracePeriodSeconds: 0
