Makefile: Add multi-arch support for cilium images
Add tags for different architectures;
Add script to create and push manifest list.

Signed-off-by: Jianlin Lv <Jianlin.Lv@arm.com>

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -80,7 +80,7 @@ ifneq ($(LOCKDEBUG),)
 endif
 
 # Container engine
-CONTAINER_ENGINE?=docker
+export CONTAINER_ENGINE?=docker
 CONTAINER_ENGINE_FULL=$(QUIET)$(CONTAINER_ENGINE)
 
 ifeq ($(shell uname -m),aarch64)
