helm, docs: fix typo in cni-chaining in values.yaml
Signed-off-by: Daniel Borkmann <daniel@iogearbox.net>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -104,7 +104,7 @@ global:
     # chainingMode enables chaining on top of other CNI plugins. Possible
     # values:
     #  - none
-    #  - generic-verth
+    #  - generic-veth
     #  - aws-cni
     #  - portmap
     chainingMode: none
